# ansible-buildkite-agent

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  pull-requests.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml
templates/: buildkite-agent.cfg.j2  buildkite-agent.service.j2  checkout.sample.j2
tests/: test.yml
vars/: main.yml
