[tool.poetry]
name = "ansible-buildkite-agent"
version = "0.1.0"
description = "Ansible playbook to configure a buildkite-agent"
authors = ["Vitor Pellegrino <vitor@pellegrino.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
molecule = {extras = ["docker"], version = "^3.5.2"}
ansible-lint = "^5.3.2"
yamllint = "^1.26.3"
ansible = "^4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
